--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==1.1.0
+absl-py==1.1.0
 aiohttp==3.8.1
 aiosignal==1.2.0
 alabaster==0.7.12
@@ -162,6 +162,7 @@ python-telegram-bot==13.12
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.3.0
+pywin32==304
 pywinpty==2.0.6
 PyYAML==6.0
 pyzmq==23.2.0
